Fix style on mobile

--- a/src/assets/styles/block/_detail.scss
+++ b/src/assets/styles/block/_detail.scss
@@ -280,4 +280,68 @@
 	#detail {
 		margin-top: 10px;
 	}
+	.doctor-big {
+		.doctor__image {
+			width: 100%;
+			margin-bottom: 10px;
+			img {
+				width: 100%;
+			}
+		}
+		.doctor__details {
+			padding-left: 0;
+		}
+		.doctor__name {
+			font-size: 18px;
+			padding-right: 0;
+			margin-bottom: 10px;
+		}
+		.doctor__favorite {
+			top: 4px;
+		}
+		.doctor__rating {
+			margin: 10px 0 0;
+		}
+		.btn-icon {
+			min-width: 100%;
+		}
+	}
+	.detail-wrap {
+		.col-md-9 {
+			padding: 0;
+		}		
+		.block__title {
+			padding-right: 10px;
+			padding-left: 10px;
+			h3 {
+				font-size: 18px;
+			}
+		}
+	}
+	.block__detail {
+		padding: 0 10px;
+		&_line {
+			margin-bottom: 0;
+		}
+	}
+	.line__content {
+		padding-left: 40px;
+		&_title {
+			font-size: 15px;
+			padding-top: 4px;
+		}
+	}
+	.line__icon {
+		font-size: 24px;
+	}
+	.review {
+		&__quocte {
+			padding: 10px 0 0 25px;
+			clear: both;
+			i {
+				left: 0;
+				top: 5px;
+			}
+		}
+	}
 }
